re PR c++/56772 (placement new operator does not work inside function template for array types.)

PR c++/56772
	* init.c (build_new): Don't try to process an array initializer
	at template definition time.

From-SVN: r197331